package com.renato.service;

import com.renato.controller.dto.ProgressoImagemDTO;
import com.renato.controller.dto.RecompensaCategoriaDTO;
import com.renato.model.*;
import com.renato.repository.*;
import java.util.*;

/**
 * serviço responsável pela lógica de recompensas visuais (sistema de peças/quebra-cabeça).
 * gerencia o desbloqueio de partes da imagem conforme o usuário progride nas categorias.
 */
public class RecompensaService {
    private final ProgressoCategoriaRepository progressoRepository;
    private final CategoriaRepository categoriaRepository;

    // Construtor padrão
    public RecompensaService() {
        this(new ProgressoCategoriaRepository(), new CategoriaRepository());
    }

    // construtor com Injeção de Dependências
    public RecompensaService(ProgressoCategoriaRepository progressoRepository,
                            CategoriaRepository categoriaRepository) {
        this.progressoRepository = progressoRepository;
        this.categoriaRepository = categoriaRepository;
    }

    /**
     * calcula o progresso percentual da imagem desbloqueada em uma categoria.
     * sistema de peças por quadrante:
     * - 25% de progresso: desbloqueia peça 1 (quadrante superior esquerdo)
     * - 50% de progresso: desbloqueia peça 2 (quadrante superior direito)
     * - 75% de progresso: desbloqueia peça 3 (quadrante inferior esquerdo)
     * - 100% de progresso: desbloqueia peça 4 (quadrante inferior direito) - imagem completa!
     *
     * @param usuarioId ID do usuário
     * @param categoriaId ID da categoria
     * @return ProgressoImagemDTO com informações do progresso visual (percentual, peças desbloqueadas, etc)
     */
    public ProgressoImagemDTO calcularProgressoImagem(Long usuarioId, Long categoriaId) {
        ProgressoCategoria progresso = progressoRepository.findByUsuarioAndCategoria(usuarioId, categoriaId);
        Categoria categoria = categoriaRepository.findById(categoriaId);

        if (progresso == null || categoria == null) {
            return new ProgressoImagemDTO(
                0,
                new ArrayList<>(),
                4,
                false,
                null,
                obterDescricaoPecas(new ArrayList<>())
            );
        }

        List<Integer> pecasDesbloqueadas = progresso.getPecasDesbloqueadas();
        int numPecasDesbloqueadas = pecasDesbloqueadas != null ? pecasDesbloqueadas.size() : 0;

        // calcula percentual baseado em 4 peças (os níveis vão de 0 a 4, mas só níveis 1-4 desbloqueiam peças)
        int totalPecas = 4;
        double percentual = totalPecas > 0 ? (numPecasDesbloqueadas * 100.0 / totalPecas) : 0;
        boolean imagemCompleta = numPecasDesbloqueadas >= totalPecas;

        return new ProgressoImagemDTO(
            Math.round(percentual * 100.0) / 100.0,
            pecasDesbloqueadas != null ? pecasDesbloqueadas : new ArrayList<>(),
            totalPecas,
            imagemCompleta,
            categoria.getCaminhoImagemCompleta(),
            obterDescricaoPecas(pecasDesbloqueadas)
        );
    }

    /**
     * Retorna descrição detalhada de cada peça por quadrante.
     *
     * @param pecasDesbloqueadas lista de peças já desbloqueadas
     * @return Map com descrição de cada quadrante
     */
    private Map<Integer, String> obterDescricaoPecas(List<Integer> pecasDesbloqueadas) {
        Map<Integer, String> descricoes = new HashMap<>();
        descricoes.put(1, pecasDesbloqueadas != null && pecasDesbloqueadas.contains(1)
            ? "Quadrante Superior Esquerdo - Desbloqueado (25%)"
            : "Quadrante Superior Esquerdo - Bloqueado (Alcance 25%)");
        descricoes.put(2, pecasDesbloqueadas != null && pecasDesbloqueadas.contains(2)
            ? "Quadrante Superior Direito - Desbloqueado (50%)"
            : "Quadrante Superior Direito - Bloqueado (Alcance 50%)");
        descricoes.put(3, pecasDesbloqueadas != null && pecasDesbloqueadas.contains(3)
            ? "Quadrante Inferior Esquerdo - Desbloqueado (75%)"
            : "Quadrante Inferior Esquerdo - Bloqueado (Alcance 75%)");
        descricoes.put(4, pecasDesbloqueadas != null && pecasDesbloqueadas.contains(4)
            ? "Quadrante Inferior Direito - COMPLETO! (100%)"
            : "Quadrante Inferior Direito - Bloqueado (Alcance 100%)");
        return descricoes;
    }

    /**
     * verifica se uma nova peça deve ser desbloqueada com base no nível atingido.
     * 
     * @param nivelAtual nível atual do usuário na categoria
     * @param pecasDesbloqueadas lista de peças já desbloqueadas
     * @return true se uma nova peça foi desbloqueada
     */
    public boolean verificarNovaPeca(int nivelAtual, List<Integer> pecasDesbloqueadas) {
        if (pecasDesbloqueadas == null) {
            return false;
        }
        
        // verifica se o nível atual já está na lista de peças desbloqueadas
        return pecasDesbloqueadas.contains(nivelAtual);
    }

    /**
     * retorna informações sobre todas as recompensas visuais de um usuário.
     * 
     * @param usuarioId ID do usuário
     * @return lista de RecompensaCategoriaDTO com progresso visual de cada categoria
     */
    public List<RecompensaCategoriaDTO> obterTodasRecompensasUsuario(Long usuarioId) {
        List<Categoria> todasCategorias = categoriaRepository.findAll();
        List<RecompensaCategoriaDTO> recompensas = new ArrayList<>();

        for (Categoria categoria : todasCategorias) {
            ProgressoImagemDTO progressoImagem = calcularProgressoImagem(usuarioId, categoria.getId());
            recompensas.add(new RecompensaCategoriaDTO(
                categoria.getNome(),
                categoria.getId(),
                progressoImagem.getPercentualDesbloqueado(),
                progressoImagem.getPecasDesbloqueadas(),
                progressoImagem.getTotalPecas(),
                progressoImagem.isImagemCompleta(),
                progressoImagem.getCaminhoImagemCompleta(),
                progressoImagem.getDescricaoPecas()
            ));
        }

        return recompensas;
    }
}
