@startuml Diagrama de Controladores - Fact or Fake

title Camada de Controladores (API REST)

' ==========================
' CONFIGURAÇÕES DE ESTILO
' ==========================
skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam linetype ortho

skinparam class {
    BackgroundColor<<Controller>> #E8F5E9
    BorderColor<<Controller>> #2E7D32
    BackgroundColor<<Service>> #FFF9C4
    BorderColor<<Service>> #F57F17
    BackgroundColor<<Repository>> #F3E5F5
    BorderColor<<Repository>> #6A1B9A
}

' ==========================
' CONTROLADORES
' ==========================

class AuthController <<Controller>> {
    - usuarioService: UsuarioService
    --
    <b>Rotas de Autenticação:</b>
    + POST /login
    + POST /logout
    + GET /session/usuario
    --
    + login(Context ctx): void
    + logout(Context ctx): void
    + getUsuarioLogado(Context ctx): void
    + {static} getUsuarioAutenticado(Context): Long
}

class UsuarioController <<Controller>> {
    - usuarioService: UsuarioService
    - progressoService: ProgressoCategoriaService
    - conquistaService: ConquistaVerificadorService
    --
    <b>Rotas de Usuário:</b>
    + POST /usuarios
    + GET /usuarios
    + GET /usuarios/:id
    + PUT /usuarios/:id
    + DELETE /usuarios/:id
    + GET /meu-perfil
    --
    + listarTodos(Context ctx): void
    + buscarPorId(Context ctx): void
    + criar(Context ctx): void
    + atualizar(Context ctx): void
    + deletar(Context ctx): void
    + obterMeuPerfil(Context ctx): void
}

class CategoriaController <<Controller>> {
    - categoriaService: CategoriaService
    - progressoService: ProgressoCategoriaService
    --
    <b>Rotas de Categoria:</b>
    + POST /categorias
    + GET /categorias
    + GET /categorias/:id
    + PUT /categorias/:id
    + DELETE /categorias/:id
    + GET /categorias/:id/meu-progresso
    + GET /categorias/:id/estatisticas
    --
    + listarTodas(Context ctx): void
    + buscarPorId(Context ctx): void
    + criar(Context ctx): void
    + atualizar(Context ctx): void
    + deletar(Context ctx): void
    + obterMeuProgresso(Context ctx): void
    + obterEstatisticas(Context ctx): void
}

class JogoController <<Controller>> {
    - jogoService: JogoOrquestradorService
    - respostaService: RespostaService
    --
    <b>Rotas do Jogo:</b>
    + GET /jogo/categoria/:categoriaId/noticia
    + POST /jogo/noticia/:id/responder
    + GET /minhas-respostas
    --
    + obterNoticiaAleatoria(Context ctx): void
    + responderNoticia(Context ctx): void
    + listarMinhasRespostas(Context ctx): void
}

class NoticiaController <<Controller>> {
    - noticiaService: NoticiaService
    --
    <b>Rotas de Notícia (CRUD):</b>
    + POST /noticias
    + GET /noticias
    + GET /noticias/:id
    + PUT /noticias/:id
    + DELETE /noticias/:id
    --
    + criar(Context ctx): void
    + listarTodas(Context ctx): void
    + buscarPorId(Context ctx): void
    + atualizar(Context ctx): void
    + deletar(Context ctx): void
}

class ConquistaController <<Controller>> {
    - conquistaService: ConquistaVerificadorService
    --
    <b>Rotas de Conquista:</b>
    + GET /conquistas
    + GET /minhas-conquistas
    --
    + listarTodas(Context ctx): void
    + listarMinhasConquistas(Context ctx): void
}

class RecompensaController <<Controller>> {
    - recompensaService: RecompensaService
    --
    <b>Rotas de Recompensa:</b>
    + GET /minhas-recompensas
    + GET /categoria/:categoriaId/progresso-imagem
    --
    + listarMinhasRecompensas(Context ctx): void
    + obterProgressoImagem(Context ctx): void
}

' ==========================
' SERVIÇOS USADOS
' ==========================

class UsuarioService <<Service>>
class CategoriaService <<Service>>
class NoticiaService <<Service>>
class JogoOrquestradorService <<Service>>
class RespostaService <<Service>>
class RecompensaService <<Service>>
class ProgressoCategoriaService <<Service>>
class ConquistaVerificadorService <<Service>>

' ==========================
' DEPENDÊNCIAS
' ==========================

AuthController ..> UsuarioService

UsuarioController ..> UsuarioService
UsuarioController ..> ProgressoCategoriaService
UsuarioController ..> ConquistaVerificadorService

CategoriaController ..> CategoriaService
CategoriaController ..> ProgressoCategoriaService

NoticiaController ..> NoticiaService

JogoController ..> JogoOrquestradorService
JogoController ..> RespostaService

ConquistaController ..> ConquistaVerificadorService

RecompensaController ..> RecompensaService

' ==========================
' NOTAS EXPLICATIVAS
' ==========================

note top of AuthController
    <b>Autenticação Simples</b>

    Sistema de sessão com Javalin:
    - Login só com email (sem senha)
    - Cookie de sessão automático
    - Middleware valida usuário logado

    Todas as rotas protegidas requerem login!
end note

note right of JogoController
    <b>Controlador Principal do Jogo</b>

    <b>Fluxo de Jogo:</b>
    1. GET /jogo/categoria/:categoriaId/noticia
       → Retorna notícia não respondida

    2. POST /jogo/noticia/:id/responder
       Body: { "resposta": true/false }
       → Orquestra via JogoOrquestradorService
       → Retorna ResultadoJogadaDTO completo
       → Atualiza pontuação, nível, conquistas

    Usa sessão para identificar usuário!
end note

note bottom of CategoriaController
    <b>Progresso e Estatísticas por Categoria</b>

    GET /categorias/:id/meu-progresso
    → Retorna: progresso detalhado

    GET /categorias/:id/estatisticas
    → Retorna: acertos, total, percentual

    GET /categorias/:id/progresso-imagem
    → Retorna: peças desbloqueadas [1,2,3,4]
    → Frontend monta quebra-cabeça visual
end note

note left of UsuarioController
    <b>Perfil do Jogador</b>

    GET /meu-perfil
    → Retorna:
      - Nível e título atual
      - Pontos totais
      - Taxa de acerto
      - Progresso para próximo nível

    GET /minhas-respostas
    → Histórico completo de respostas
end note

@enduml

